package Alachisoft.NCache.Common.Protobuf;

message BulkGetCacheItemCommand {
	repeated string keys = 1;
	optional int64 requestId = 2;
	optional int32 flag = 3;
	optional string providerName = 4;
	optional int32 readMode = 5 [default = -1];
	optional int64 clientLastViewId = 6 [default=-1];
	optional int32 MethodOverload = 7 [default=0];
	optional int32 commandVersion = 8 [default=0];
	optional string intendedRecipient = 9 [default = ""];
}